--- a/index.html
+++ b/index.html
@@ -48,6 +48,22 @@
             background-color: #677165;
             text-decoration: none;
         }
+
+        @media (max-width: 768px) {
+    .hero h1 {
+        font-size: 2rem;
+    }
+
+    .hero p {
+        font-size: 1.2rem; 
+    }
+
+    .hero .btn {
+        font-size: 1.2rem;
+        padding: 8px 16px; 
+}
+}
+
         .carousel-item {
             display: none;
             visibility: hidden;
