Text, names, carousel

--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
                 <tr>
                     <td><img src="images/siivousliinnat.jpeg" alt="Tuote 1" style="width: 100px;"></td>
                     <td>Ekologiset siivousliinat</td>
-                    <td>Anna</td>
+                    <td>Anna Mäkelä</td>
                     <td>Olen todella tyytyväinen laatuun, ne ovat monikäyttöisiä ja käteviä.</td>
                     <td>
                         <span>★★★★★</span> <!-- Tähtiarvostelu -->
@@ -523,7 +523,7 @@
                 <tr>
                     <td><img src="images/matcha powder.jpeg" alt="Tuote 2" style="width: 100px;"></td>
                     <td>Matcha-jauhe</td>
-                    <td>Matti</td>
+                    <td>Matti Verho</td>
                     <td>Maku oli hyvä, mutta hieman kallis.</td>
                     <td>
                         <span>★★★★☆</span>
@@ -533,7 +533,7 @@
                 <tr>
                     <td><img src="images/coconutoil.jpeg" alt="Tuote 3" style="width: 100px;"></td>
                     <td>Kookosöljy</td>
-                    <td>Laija</td>
+                    <td>Laija Long</td>
                     <td>Laadukas tuote, käytän sitä sekä ruoanlaittoon että ihonhoitoon.</td>
                     <td>
                         <span>★★★★★</span>
