--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
     <!-- Bestsellers-karuselli -->
     <section id="products" class="container my-5">
         <h2 class="text-center mb-4">TUTUSTU SUOSIKKITUOTTEISIIN</h2>
-        <div id="bestsellersCarousel" class="carousel slide"  data-bs-interval="false">">
+        <div id="bestsellersCarousel" class="carousel slide"  data-bs-interval="false">
             <div class="carousel-inner">
                 <!-- Ensimmäinen slaidi 3 tuotteella -->
                 <div class="carousel-item active">
